[package]
name = "puckwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
nix = { version = "0.30.1", features = ["process", "signal"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
